# esp-workspace

./: .envrc  .gitignore  CLAUDE.md  Makefile  README.md  secrets.cmake.example
common/logging/: CMakeLists.txt  logging.c
common/logging/include/: logging.h
common/wifi/: CMakeLists.txt  wifi.c
common/wifi/include/: wifi.h
esp32-hello/: CMakeLists.txt
esp32-hello-led/: CMakeLists.txt
esp32-hello-led/main/: CMakeLists.txt  main.c
esp32-hello/main/: CMakeLists.txt  main.c
esp32-wifi/: CMakeLists.txt
esp32-wifi/main/: CMakeLists.txt  main.c
